ignore more stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .DS_Store
+SSCrypto.xcodeproj/xcuserdata
+SSCrypto.xcodeproj/ed.mode1v3
+SSCrypto.xcodeproj/project.xcworkspace
+SSCrypto.xcodeproj/project.xcworkspace/xcuserdata/ed.xcuserdatad/UserInterfaceState.xcuserstate
